--- a/vue_prob/06_vue_deep/todolist-app/package.json
+++ b/vue_prob/06_vue_deep/todolist-app/package.json
@@ -6,22 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.3.4",
+    "prettier": "^3.5.3",
     "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/eslint-config-prettier": "^10.2.0",
-    "eslint": "^9.21.0",
-    "eslint-plugin-vue": "~10.0.0",
-    "globals": "^16.0.0",
-    "prettier": "3.5.3",
     "vite": "^6.2.1",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
