스프링10장 기본 완료

--- a/back/server_prob/spring/10_spring/apiserver/build.gradle
+++ b/back/server_prob/spring/10_spring/apiserver/build.gradle
@@ -14,7 +14,7 @@ ext {
     junitVersion = '5.10.2'
     springVersion = '5.3.37'
     lombokVersion = '1.18.30'
-    springSecurityVersion = '5.8.13'
+    springSecurityVersion='5.8.13'
 }
 
 sourceCompatibility = '1.17'
@@ -31,12 +31,6 @@ dependencies {
             { exclude group: 'commons-logging', module: 'commons-logging' }
     implementation "org.springframework:spring-webmvc:${springVersion}"
     implementation 'javax.inject:javax.inject:1'
-
-    // 보안
-    implementation("org.springframework.security:spring-security-web:${springSecurityVersion}")
-    implementation("org.springframework.security:spring-security-config:${springSecurityVersion}")
-    implementation("org.springframework.security:spring-security-core:${springSecurityVersion}")
-    implementation("org.springframework.security:spring-security-taglibs:${springSecurityVersion}")
 
     // AOP
     implementation 'org.aspectj:aspectjrt:1.9.20'
@@ -93,6 +87,20 @@ dependencies {
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+
+    // 보안
+    implementation("org.springframework.security:spring-security-web:${springSecurityVersion}")
+    implementation("org.springframework.security:spring-security-config:${springSecurityVersion}")
+    implementation("org.springframework.security:spring-security-core:${springSecurityVersion}")
+    implementation("org.springframework.security:spring-security-taglibs:${springSecurityVersion}")
+
+
+    // jwt
+    implementation("io.jsonwebtoken:jjwt-api:0.11.5")
+    runtimeOnly("io.jsonwebtoken:jjwt-impl:0.11.5")
+    implementation("io.jsonwebtoken:jjwt-jackson:0.11.5")
+
+
 }
 
 
